@@ -1,9 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2004/04/20 17:18:50 minskim Exp $
+# $NetBSD: Makefile,v 1.4 2004/04/21 21:26:26 minskim Exp $
 #
 
-DISTNAME=		am
-PKGNAME=		mathomatic-11.0b
-PKGREVISION=		1
+DISTNAME=		mathomatic-11.0c
 CATEGORIES=		math
 MASTER_SITES=		http://www.panix.com/~gesslein/
 EXTRACT_SUFX=		.tgz
@@ -15,7 +13,7 @@ COMMENT=		Small portable symbolic math program
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
 WRKSRC=			${WRKDIR}/am
-DIST_SUBDIR=		${PKGNAME}
+DIST_SUBDIR=		${PKGNAME_NOREV}
 USE_BUILDLINK3=		yes
 NO_CONFIGURE=		yes
 MAKEFILE=		makefile
