@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5708 2004/04/21 17:23:28 taca Exp $
+$NetBSD: CHANGES,v 1.5709 2004/04/21 21:26:25 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -2211,3 +2211,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated anjuta to 1.2.2 [jmmv 2004-04-21]
 	Updated gail to 1.6.1 [recht 2004-04-21]
 	Updated p5-File-MMagic to 1.22 [taca 2004-04-21]
+	Updated mathomatic to 11.0c [minskim 2004-04-21]
